# clipmate

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  manager.rs
