[package]
name = "clipboard_manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clipmate"
path = "src/main.rs"

[lib]
name = "clipboard_manager_lib"
path = "src/lib.rs"

[dependencies]
clipboard = "0.5.0"
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
sha2 = "0.10.6"
